<resources>
    <string name="app_name">Messsy</string>
    <string name="welcome_to_">Welcome to messsy!</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="sign_in">SignIn</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="create_acco">Create Account</string>

    <string name="complaint_s">Complaint Section</string>
    <string name="issue">Issue</string>
    <string name="description">Description</string>
    <string name="upload_image">Upload Image</string>
    <string name="file_compla">File Complaint</string>

    <string name="vote_for_ch">Vote for change</string>
    <string name="choose_meal">Choose meal type</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="food_item">Food Item</string>
    <string name="vote_for_adding">vote for adding</string>
    <string name="vote_for_re">Vote for removing</string>
    <string name="submit">Submit</string>

    <string name="to_all_the_">
        To all the students of Arya Mess :\nLet me set the scene: your friend John is rushing to get his daughter from school and his son to the soccer field, and he still needs to stop at the grocery store because there\'s nothing in the fridge. In the midst of this everyday madness, he gets a text message from Google with a verification code. He thinks,\"That\'s weird. Maybe I should log in to my email and see what\'s going on.\"
    </string>
    <string name="notice">Notice</string>
    <string name="absence_not">Absence Notification</string>
    <string name="start_date">Start Date</string>


    <string name="meals_that_">Meals that you\'ll miss</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="email_add">Email Address</string>
    <string name="room_no">Room Number</string>
    <string name="enter_password">Enter a password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Login</string>
    <string name="edit_your_details">Edit your details</string>
    <string name="save_details">Save Details</string>
    <string name="end_date">End Date</string>

    <string name="home">Home</string>
    <string name="qrcode">QRcode</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_coupan">View Coupon</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="xyz">XYZ</string>
    <string name="room_no_339">Room No. 339</string>
    <string name="profile1">Profile</string>
    <string name="view_coupon">View Coupon</string>

    <string name="absence">Record future absence</string>
    <string name="payment">Manage Payments</string>
    <string name="change">Vote for menu Change</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="breakfast_image">Breakfast image</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="get_password_reset_link">Get password reset link</string>
    <string name="last_payment_details">Last Payment Details</string>

    <string name="logout">Logout</string>
    <string name="your_balance">Your Balance:</string>
    <string name="balance">Balance</string>

    <string name="first_slide_title">Fooding Made Easier</string>
    <string name="second_slide_title">Personalized Experience</string>
    <string name="third_slide_title">Be Informed</string>
    <string name="first_slide_desc">Access NITPs mess bill, suggestion, items, latest information and more...</string>
    <string name="second_slide_desc">Unified platform for payment of messs bills, reporting absence and reporting faults.... </string>
    <string name="third_slide_desc">Get info about the changes in the menu and give feedback of the meals provided.</string>


</resources>
