<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vote.VoteActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="43dp">

            <ImageView
                android:id="@id/arrow_1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/arrow_1"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/vote_for_ch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/arrow_1"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/josefin_sans_bold"
                android:text="@string/vote_for_ch"
                android:textAppearance="@style/vote_for_ch" />

            <TextView
                android:id="@+id/choose_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/vote_for_ch"
                android:layout_marginStart="25dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/josefin_sans_semibold"
                android:text="@string/choose_meal"
                android:textAppearance="@style/choose_meal" />

            <RadioGroup
                android:id="@+id/radio_buttom_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/choose_meal"
                android:layout_marginStart="36dp"
                android:layout_marginTop="19dp"
                >
                <RadioButton
                    android:id="@+id/breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/breakfast"
                    android:button="@drawable/radio_button_selector"
                    android:text="@string/breakfast"
                    android:padding="8dp"
                    android:fontFamily="@font/josefin_sans_semibold"/>
                <RadioButton
                    android:id="@+id/lunch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/lunch"
                    android:layout_marginTop="9dp"
                    android:padding="8dp"
                    android:button="@drawable/radio_button_selector"
                    android:text="@string/lunch"
                    android:fontFamily="@font/josefin_sans_semibold"/>
                <RadioButton
                    android:id="@+id/dinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/dinner"
                    android:layout_marginTop="9dp"
                    android:padding="8dp"
                    android:button="@drawable/radio_button_selector"
                    android:text="@string/dinner"
                    android:fontFamily="@font/josefin_sans_semibold"/>
            </RadioGroup>
            <TextView
                android:id="@+id/food_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_item"
                android:layout_below="@id/radio_buttom_group"
                android:textAppearance="@style/food_item"
                android:fontFamily="@font/josefin_sans_semibold"
                android:layout_marginTop="45dp"
                android:layout_marginStart="25dp"/>

            <EditText
                android:id="@+id/enter_food_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:layout_below="@id/food_item"
                android:backgroundTint="#39374D"
                android:layout_marginEnd="30dp"
                tools:ignore="Autofill,LabelFor,TextFields" />

            <Button
                android:id="@+id/vote_for_ad"
                android:layout_width="130dp"
                android:layout_height="37dp"
                android:background="@drawable/white_background"
                android:layout_below="@id/enter_food_item"
                android:layout_marginStart="25dp"
                android:elevation="8dp"
                android:layout_marginTop="65dp"
                android:fontFamily="@font/josefin_sans_semibold"
                android:textAppearance="@style/vote_for_ad"
                android:text="@string/vote_for_adding"/>

            <Button
                android:id="@+id/vote_for_re"
                android:layout_width="130dp"
                android:layout_height="37dp"
                android:background="@drawable/white_background"
                android:layout_below="@id/enter_food_item"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:elevation="8dp"
                android:fontFamily="@font/josefin_sans_semibold"
                android:layout_marginTop="65dp"
                android:textAppearance="@style/vote_for_re"
                android:text="@string/vote_for_re"/>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vote_for_ad"
                android:layout_marginStart="35dp"
                android:layout_marginTop="85dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/rectangle_1"
                android:elevation="8dp"
                android:fontFamily="@font/josefin_sans_bold"
                android:text="@string/submit"
                android:textAppearance="@style/submit" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>