<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <!-- Here you put the rest of your current view-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:background="@color/profileBackground"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".home.ProfileFragment">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:src="@drawable/back_to_home_button"
            app:srcCompat="@drawable/back_to_home_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/profile1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/undraw_profile_pic" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xyz"
            android:textSize="24sp"
            android:textStyle="bold" />

        //

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginLeft="40dp"
            android:background="@drawable/undraw_cap"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:text="abc@xyz.com"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Room_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/room_no_339"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            style="@style/profileStyledBackButton"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textColor="@color/profileBackground" />

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_alignParentTop="true" />

        <TextView
            style="@style/profileStyledBackButton"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/view_coupon"
            android:textColor="@color/profileBackground" />
    </LinearLayout>
</ScrollView>