<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.LoginActivity">


    <RelativeLayout
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        tools:context=".MainActivity">

        <ProgressBar
            android:id="@+id/login_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <ImageView
            android:id="@+id/img_1"
            android:layout_width="wrap_content"
            android:layout_height="320dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/welcome_to_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/welcome_to_"
            android:textAppearance="@style/welcome_to_"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_to_"
            android:layout_alignStart="@id/line_1"
            android:layout_marginStart="3dp"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textAppearance="@style/email" />

        <EditText
            android:id="@+id/line_1"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:backgroundTint="#39374D"
            android:inputType="textEmailAddress"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_1"
            android:layout_alignStart="@id/line_1"
            android:layout_marginStart="3dp"
            android:layout_marginTop="0dp"
            android:text="@string/Password"
            android:textAppearance="@style/password"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/line_2"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:backgroundTint="#39374D"
            android:inputType="textPassword"
            android:textColor="#000000" />

        <Button
            android:id="@+id/rectangle_1"
            android:layout_width="290dp"
            android:layout_height="55dp"
            android:layout_below="@id/line_2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/curved_rectangle"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rectangle_1"
            android:layout_alignStart="@id/line_1"
            android:layout_marginStart="3dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="30dp"
            android:text="@string/forgot_pass"
            android:textAppearance="@style/forgot_pass"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rectangle_1"
            android:layout_alignEnd="@id/line_1"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="30dp"
            android:text="@string/create_acco"
            android:textAppearance="@style/create_acco"
            android:textSize="15sp" />


    </RelativeLayout>
</ScrollView>
