<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.ForgotPassword"
    app:layout_constraintStart_toStartOf="parent">


        <RelativeLayout
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/forgot_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@id/email_text"
                    android:layout_marginTop="25dp"
                    android:text="@string/forgot_password"
                    android:textAppearance="@style/forgot_pass"
                    android:textSize="35sp" />


                <ImageView
                    android:id="@+id/breakfast_image"
                    android:layout_width="340dp"
                    android:layout_height="170dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="120dp"
                    android:src="@drawable/breakfast"
                    android:contentDescription="@string/breakfast_image" />

                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/breakfast_image"
                    android:layout_alignStart="@id/email_edit_text"
                    android:layout_marginTop="28dp"
                    android:layout_marginStart="3dp"
                    android:text="@string/email"
                    android:textAppearance="@style/name" />

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_text"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="0dp"
                    android:backgroundTint="#39374D"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/btn_forgot_pass"
                    android:layout_width="290dp"
                    android:layout_height="55dp"
                    android:layout_below="@id/email_edit_text"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="220dp"
                    android:background="@drawable/rectangle_1"
                    android:elevation="10dp"
                    android:text="@string/get_password_reset_link"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />


        </RelativeLayout>
</ScrollView>